change rasa openapi spec to not use inline schemas for request/response types.
